--- a/starship.toml
+++ b/starship.toml
@@ -1,14 +1,30 @@
-[character]
-success_symbol = "[❯](bold green)"
-error_symbol =  "[❯](bold red)"
+[[battery.display]]
+threshold = 25
+style = "bold red"
+
+[[battery.display]]
+threshold = 50
+style = "bold yellow"
+
+[character] # The name of the module we are configuring is "character"
+success_symbol = "[➜](bold green)" 
+error_symbol = "[✗](bold red)"
 
 [directory]
-truncation_length = 22
-truncate_to_repo = false
+truncation_length = 100 
+format = "[$path]($style) "
+style = "bold cyan"
 
 [git_branch]
 symbol = "🌱 "
+style = "bold green"
+
+[git_commit]
+commit_hash_length = 6
+style = "bold green"
 
 [git_status]
-style = "bold yellow"
-modified = "!"
+style = "bold green"
+
+[package]
+format = "via [🐇 $version](166 bold) "
